Added more tools

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -15,7 +15,10 @@ RUNTIME_CFLAGS="-DDEBUG"
 PARALLELIZATION_OPTIONS=-alloc-aa-verbose=1 -noelle-pdg-verbose=1 -noelle-verbose=2 -dswp-force -noelle-min-hot=0
 OPT_LEVEL=-O3
 
+# Front-end flags
+FRONTEND_FLAGS=-emit-llvm -O0 -Xclang -disable-O0-optnone
 INCLUDES=-I../../include/threadpool/include
+
 THREADER=Parallelizer_utils
 OPTIMIZED=parallelized
 PRINT_OUTPUT_FILE=test.txt
@@ -27,32 +30,32 @@ BC_FILES := $(notdir $(CPP_FILES:.cpp=.bc))
 all: baseline testseq $(OPTIMIZED)
 
 %.bc: %.c
-	$(CC) $(INCLUDES) -emit-llvm -O0 -Xclang -disable-O0-optnone -c $< -o $@
+	$(CC) $(INCLUDES) $(FRONTEND_FLAGS) -c $< -o $@
 	noelle-norm $@ -o $@
 	llvm-dis $@
 
 %.bc: %.cpp
-	$(CPP) $(INCLUDES) -std=c++14 -emit-llvm -O0 -Xclang -disable-O0-optnone -c $< -o $@
+	$(CPP) $(INCLUDES) $(FRONTEND_FLAGS) -std=c++14 -c $< -o $@
 	noelle-norm $@ -o $@
 	llvm-dis $@
 
 baseline: baseline.bc
 	$(CPP) $(OPT_LEVEL) $^ -o $@
 
-testseq: test_seq.bc
+testseq: test_baseline.bc
 	$(CPP) -std=c++14 -pthreads $(OPT_LEVEL) $^ $(LIBS) -o $@
 	
 $(THREADER).bc: $(THREADER).cpp
 	$(CPP) $(RUNTIME_CFLAGS) $(INCLUDES) -std=c++14 -emit-llvm $(OPT_LEVEL) -c $^ -o $@
 
-$(OPTIMIZED): test_dswp.bc
+$(OPTIMIZED): test_parallelized.bc
 	$(CPP) -std=c++14 -pthreads $(OPT_LEVEL) $^ $(LIBS) -o $@
 
-test_dswp_unoptimized.bc: test_seq.bc output.prof
+test_parallelized_unoptimized.bc: test_baseline.bc output.prof
 	noelle-pgo output.prof $(PARALLELIZATION_OPTIONS) $< -o $@
 	llvm-dis $@
 
-test_dswp.bc: test_dswp_unoptimized.bc
+test_parallelized.bc: test_parallelized_unoptimized.bc
 	$(CPP) $(OPT_LEVEL) -c -emit-llvm $^ -o $@
 	llvm-dis $@
 
@@ -60,24 +63,24 @@ baseline.bc: test.bc
 	$(CPP) $(OPT_LEVEL) -c -emit-llvm $^ -o $@
 	llvm-dis $@
 
-test_seq.bc: test.bc $(THREADER).bc
+test_baseline.bc: test.bc $(THREADER).bc
 	llvm-link $^ -o $@
 	noelle-pre "$@"
 	llvm-dis $@
 
-test_seq_enable.bc: test_seq.bc output.prof
+test_baseline_enable.bc: test_baseline.bc output.prof
 	noelle-enable output.prof $(PARALLELIZATION_OPTIONS) $< -o $@
 
 output.prof: default.profraw
 	llvm-profdata merge $^ -output=$@
 
-default.profraw: test_seq_prof input.txt
+default.profraw: test_baseline_prof input.txt
 	./$< `cat input.txt` 
 
-test_seq_prof: test_seq_prof.bc
+test_baseline_prof: test_baseline_prof.bc
 	$(CPP) -fprofile-instr-generate $^ $(LIBS) -o $@
 
-test_seq_prof.bc: test_seq.bc
+test_baseline_prof.bc: test_baseline.bc
 	@../../scripts/inject_hotprofiler.sh $^ $@
 
 input.txt:
@@ -89,21 +92,23 @@ test_correctness: input.txt baseline $(OPTIMIZED)
 	cmp output_baseline.txt output_parallelized.txt || (echo "Error $$?"; exit 1)
 	echo "Success"
 
-show_passes: test_seq.bc output.prof
+show_passes: test_baseline.bc output.prof
 	noelle-pgo output.prof $(PARALLELIZATION_OPTIONS) $^ --debug-pass=Structure -disable-output
 
-show_time: test_seq.bc output.prof
+show_time: test_baseline.bc output.prof
 	noelle-pgo output.prof $(PARALLELIZATION_OPTIONS) $^ -time-passes -disable-output
 
-pdg: test_seq.bc
-	noelle-pdg $^ -o $^
-	llvm-dis $^
+pdg: test_baseline.bc
+	noelle-pdg $^
 
-meta_clean: test_seq.bc
+meta: test_baseline.bc
+	noelle-meta-embed $^ -o $^
+
+meta_clean: test_baseline.bc
 	noelle-meta-clean $^ -o $^
 	llvm-dis $^
 
 clean:
 	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o *.txt baseline testseq $(OPTIMIZED) *.prof *.profraw *prof .*.dot
 
-.PHONY: test_correctness show_passes show_time pdg clean
+.PHONY: test_correctness show_passes show_time pdg meta_clean meta clean
