Embed the PDG before parallelization

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -51,7 +51,7 @@ $(THREADER).bc: $(THREADER).cpp
 $(OPTIMIZED): test_parallelized.bc
 	$(CPP) -std=c++14 -pthreads $(OPT_LEVEL) $^ $(LIBS) -o $@
 
-test_parallelized_unoptimized.bc: test_baseline.bc output.prof
+test_parallelized_unoptimized.bc: baseline_with_metadata.bc output.prof
 	noelle-pgo output.prof $(PARALLELIZATION_OPTIONS) $< -o $@
 	llvm-dis $@
 
@@ -61,6 +61,10 @@ test_parallelized.bc: test_parallelized_unoptimized.bc
 
 baseline.bc: test.bc
 	$(CPP) $(OPT_LEVEL) -c -emit-llvm $^ -o $@
+	llvm-dis $@
+
+baseline_with_metadata.bc: test_baseline.bc
+	noelle-meta-pdg-embed $^ -o $@
 	llvm-dis $@
 
 test_baseline.bc: test.bc $(THREADER).bc
