--- a/src/basic_utilities/CMakeLists.txt
+++ b/src/basic_utilities/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(src)
 install(  PROGRAMS 
           include/SystemHeaders.hpp 
           include/DominatorSummary.hpp
+          include/Queue.hpp
           DESTINATION 
           include
         )
