HELIX: Derive task function dependence graph before synchronization

--- a/src/helix/src/CMakeLists.txt
+++ b/src/helix/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(Srcs
   HELIXTask.cpp
   Linker.cpp
   Spiller.cpp
+  TaskFunctionDGDeriver.cpp
   SequentialSegments.cpp
   SequentialSegment.cpp
   Scheduler.cpp
