ParUtil/DOALL: IV attribution, use of IV exit condition utility in DOALL

--- a/src/parallelization_utilities/CMakeLists.txt
+++ b/src/parallelization_utilities/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(src)
 install(PROGRAMS include/Techniques.hpp
     include/LoopDependenceInfo.hpp
     include/Parallelization.hpp
+    include/InductionVariables.hpp
     include/SCCDAGAttrs.hpp
     include/SCCDAGNormalizer.hpp
     include/SCCDAGPartition.hpp
