IV Attribution: Handle Induction Variables with non constant, loop invariant step sizes

--- a/src/basic_utilities/CMakeLists.txt
+++ b/src/basic_utilities/CMakeLists.txt
@@ -33,6 +33,7 @@ install(  PROGRAMS
           include/SystemHeaders.hpp 
           include/DominatorSummary.hpp
           include/Queue.hpp
+          include/ScalarEvolutionExpander.h
           DESTINATION 
           include
         )
