IV Attribution: Implement and use ScalarEvolutionReferentialExpander

--- a/src/basic_utilities/CMakeLists.txt
+++ b/src/basic_utilities/CMakeLists.txt
@@ -34,6 +34,7 @@ install(  PROGRAMS
           include/DominatorSummary.hpp
           include/Queue.hpp
           include/ScalarEvolutionExpander.h
+          include/ScalarEvolutionReferencer.hpp
           DESTINATION 
           include
         )
