--- a/src/basic_utilities/src/CMakeLists.txt
+++ b/src/basic_utilities/src/CMakeLists.txt
@@ -2,6 +2,8 @@
 set(Srcs 
   DominatorSummary.cpp
   ScalarEvolutionExpander.cpp
+  ScalarEvolutionReferencer.cpp
+  ScalarEvolutionReferenceTreeExpander.cpp
 )
 
 # Compilation flags
