--- a/src/doall/src/CMakeLists.txt
+++ b/src/doall/src/CMakeLists.txt
@@ -36,6 +36,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../parallelization_technique/include 
   ../../hotprofiler/include 
   ../../talkdown/include
+  ../../noelle/include
   ../include 
   ./ 
   )
