--- a/src/dswp/src/CMakeLists.txt
+++ b/src/dswp/src/CMakeLists.txt
@@ -42,6 +42,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../parallelization_technique/include 
   ../../hotprofiler/include 
   ../../talkdown/include
+  ../../noelle/include
   ../include 
   ./ 
   )
