--- a/src/loop_metadata/src/CMakeLists.txt
+++ b/src/loop_metadata/src/CMakeLists.txt
@@ -27,6 +27,7 @@ include_directories(
   ../include 
   ../../basic_utilities/include 
   ../../parallelization_utilities/include
+  ../../noelle/include
   ../../pdg/include
   ../../loops/include
   )
