--- a/src/enablers/src/CMakeLists.txt
+++ b/src/enablers/src/CMakeLists.txt
@@ -40,6 +40,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../loop_distribution/include
   ../../loop_unroll/include
   ../../talkdown/include
+  ../../noelle/include
   ./
   )
 
