--- a/src/heuristics/src/CMakeLists.txt
+++ b/src/heuristics/src/CMakeLists.txt
@@ -35,6 +35,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../loops/include
   ../../parallelization_utilities/include 
   ../../talkdown/include
+  ../../noelle/include
   )
 
 # Declare the LLVM pass to compile
