--- a/src/heuristics/src/CMakeLists.txt
+++ b/src/heuristics/src/CMakeLists.txt
@@ -32,7 +32,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../alloc_aa/include 
   ../../pdg/include 
   ../../threadpool/include 
-  ../../loops/include
+  ../../loop_structure/include
   ../../parallelization_utilities/include 
   ../../talkdown/include
   ../../noelle/include
