--- a/src/loop_unroll/src/CMakeLists.txt
+++ b/src/loop_unroll/src/CMakeLists.txt
@@ -27,7 +27,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../basic_utilities/include 
   ../../alloc_aa/include 
   ../../pdg/include 
-  ../../loops/include
+  ../../loop_structure/include
   ../../parallelization_utilities/include 
   ../../hotprofiler/include 
   ../../talkdown/include
