--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -34,7 +34,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../alloc_aa/include 
   ../../pdg/include 
   ../../hotprofiler/include 
-  ../../loops/include 
+  ../../loop_structure/include 
   ../../talkdown/include
   ../include 
   )
