--- a/src/parallelizer/src/CMakeLists.txt
+++ b/src/parallelizer/src/CMakeLists.txt
@@ -31,7 +31,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../alloc_aa/include 
   ../../pdg/include 
   ../../threadpool/include 
-  ../../loops/include
+  ../../loop_structure/include
   ../../parallelization_utilities/include 
   ../../heuristics/include 
   ../../parallelization_technique/include 
