Renamed another module

--- a/src/dgsimplify/src/CMakeLists.txt
+++ b/src/dgsimplify/src/CMakeLists.txt
@@ -29,7 +29,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../alloc_aa/include 
   ../../pdg/include 
   ../../loop_structure/include
-  ../../parallelization_utilities/include 
+  ../../loops/include 
   ../../talkdown/include
   ../../noelle/include
   ../include 
