--- a/src/loops/src/CMakeLists.txt
+++ b/src/loops/src/CMakeLists.txt
@@ -13,7 +13,7 @@ set(Srcs
 set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++17 -fPIC")
 
 # Name of the LLVM pass
-set(PassName "Parallelization")
+set(PassName "Loops")
 
 # configure LLVM 
 find_package(LLVM REQUIRED CONFIG)
