--- a/src/pdg/src/CMakeLists.txt
+++ b/src/pdg/src/CMakeLists.txt
@@ -29,7 +29,7 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 include_directories(${LLVM_INCLUDE_DIRS}
            ../../basic_utilities/include
-					 ../../parallelization_utilities/include
+					 ../../loops/include
 					 ../../alloc_aa/include 
 					 ../../talkdown/include 
 					 ../include
