--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-UTILS=basic_utilities task parallelization_utilities architecture loop_metadata clean_metadata pdg_stats
+UTILS=basic_utilities task loops architecture loop_metadata clean_metadata pdg_stats
 ANALYSIS=pdg talkdown alloc_aa dataflow loop_structure
 PARALLELIZATION=parallelizer heuristics parallelization_technique dswp doall helix
 ENABLERS=enablers loop_distribution loop_unroll
@@ -30,7 +30,7 @@ loop_structure:
 task:
 	cd $@ ; ../scripts/run_me.sh
 
-parallelization_utilities:
+loops:
 	cd $@ ; ../scripts/run_me.sh
 
 architecture:
