--- a/src/hotprofiler/src/CMakeLists.txt
+++ b/src/hotprofiler/src/CMakeLists.txt
@@ -28,7 +28,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../include ../../basic_utilities/include ../../parallelization_utilities/include)
+include_directories(${LLVM_INCLUDE_DIRS} ../include ../../basic_utilities/include ../../loops/include)
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
