--- a/src/loop_metadata/src/CMakeLists.txt
+++ b/src/loop_metadata/src/CMakeLists.txt
@@ -26,7 +26,7 @@ include_directories(
   ${LLVM_INCLUDE_DIRS} 
   ../include 
   ../../basic_utilities/include 
-  ../../parallelization_utilities/include
+  ../../loops/include
   ../../noelle/include
   ../../pdg/include
   ../../loop_structure/include
