--- a/src/parallelization_technique/src/CMakeLists.txt
+++ b/src/parallelization_technique/src/CMakeLists.txt
@@ -29,7 +29,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../pdg/include 
   ../../threadpool/include 
   ../../loop_structure/include
-  ../../parallelization_utilities/include 
+  ../../loops/include 
   ../../heuristics/include 
   ../../hotprofiler/include 
   ../../noelle/include
