Unit tests: do not ignore unit test suite expectation file: test.txt

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ tests/regression/**/*.txt
 tests/performance/**/*.txt
 tests/regression/**/*.dot
 tests/performance/**/*.dot
-tests/unit/**/suite/**/*.txt
+tests/unit/**/suite/**/*_output.txt
 tests/unit/**/*.dot
 tests/**/*_prof
 
