Compilation pipeline: added a comment to the makefile about how to dump the PDG

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -11,7 +11,8 @@ RUNTIME_CFLAGS="-DDEBUG"
 #RUNTIME_CFLAGS="$(RUNTIME_CFLAGS) -DDSWP_STATS"
 #RUNTIME_CFLAGS="$(RUNTIME_CFLAGS) -DRUNTIME_PRINT"
 
-# Other parallelization options:
+# Parallelization options
+# 	- To dump the PDG: -noelle-pdg-dump
 PARALLELIZATION_OPTIONS=-alloc-aa-verbose=1 -noelle-pdg-verbose=1 -noelle-verbose=2 -dswp-force -noelle-min-hot=0
 OPT_LEVEL=-O3
 
