Unit tests: fix unit test build scripts after module renames

--- a/tests/unit/empty_template/src/CMakeLists.txt
+++ b/tests/unit/empty_template/src/CMakeLists.txt
@@ -26,7 +26,7 @@ set(PassesPath ${RootPath}/src)
 set(SVFDep ${RootPath}/external/svf/include)
 set(UtilDep ${PassesPath}/basic_utilities/include)
 set(DGDep ${PassesPath}/alloc_aa/include ${PassesPath}/pdg/include ${PassesPath}/talkdown/include)
-set(ParDep ${PassesPath}/parallelization_utilities/include)
+set(LoopDep ${PassesPath}/loops/include ${PassesPath}/loop_structure/include ${PassesPath}/loop_metadata/include)
 set(InlinerDep ${PassesPath}/dgsimplify/include)
 set(ParTechniqueDep ${PassesPath}/parallelization_technique/include)
 set(DOALLDep ${PassesPath}/doall/include)
