--- a/tests/unit/empty_template/src/CMakeLists.txt
+++ b/tests/unit/empty_template/src/CMakeLists.txt
@@ -27,7 +27,7 @@ set(SVFDep ${RootPath}/external/svf/include)
 set(UtilDep ${PassesPath}/basic_utilities/include)
 set(DGDep ${PassesPath}/alloc_aa/include ${PassesPath}/pdg/include ${PassesPath}/talkdown/include)
 set(LoopDep ${PassesPath}/loops/include ${PassesPath}/loop_structure/include ${PassesPath}/loop_metadata/include)
-set(InlinerDep ${PassesPath}/dgsimplify/include)
+set(InlinerDep ${PassesPath}/inliner/include)
 set(ParTechniqueDep ${PassesPath}/parallelization_technique/include)
 set(DOALLDep ${PassesPath}/doall/include)
 set(DSWPDep ${PassesPath}/dswp/include)
