Install unit libraries in the default installation directory

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -1,7 +1,13 @@
-all:
-	echo "DONE"
+all: install
+	../scripts/build_unit.sh 
+
+install:
+	mkdir $@ 
 
 clean:
 	rm -f *.txt ;
+	rm -rf install ;
+	rm -rf */build ;
+	find ./ -name compile_commands.json -delete
 
 .PHONY: clean
