Unit: improved the cleaning

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -9,5 +9,9 @@ clean:
 	rm -rf install ;
 	rm -rf */build ;
 	find ./ -name compile_commands.json -delete
+	find ./ -name *.bc -delete
+	find ./ -name *.ll -delete
+	find ./ -name output.prof -delete
+	find ./ -name default.profraw -delete
 
 .PHONY: clean
