IV: split up attribution and stepper utility

--- a/src/loops/CMakeLists.txt
+++ b/src/loops/CMakeLists.txt
@@ -32,6 +32,8 @@ add_subdirectory(src)
 install(PROGRAMS include/Techniques.hpp
     include/LoopDependenceInfo.hpp
     include/InductionVariables.hpp
+    include/LoopGoverningIVAttribution.hpp
+    include/IVStepperUtility.hpp
     include/SCCDAGAttrs.hpp
     include/SCCDAGNormalizer.hpp
     include/SCCDAGPartition.hpp
