Noelle: improved the API

--- a/src/heuristics/src/CMakeLists.txt
+++ b/src/heuristics/src/CMakeLists.txt
@@ -35,6 +35,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../loop_structure/include
   ../../loops/include 
   ../../talkdown/include
+  ../../hotprofiler/include
   ../../noelle/include
   )
 
