--- a/src/helix/src/CMakeLists.txt
+++ b/src/helix/src/CMakeLists.txt
@@ -33,6 +33,7 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 include_directories(${LLVM_INCLUDE_DIRS} 
   ../../../external/svf/include
   ../../basic_utilities/include 
+  ../../transformations/include
   ../../task/include 
   ../../dataflow/include 
   ../../alloc_aa/include 
