--- a/src/inliner/src/CMakeLists.txt
+++ b/src/inliner/src/CMakeLists.txt
@@ -26,6 +26,7 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 include_directories(${LLVM_INCLUDE_DIRS} 
   ../../../external/svf/include
   ../../basic_utilities/include 
+  ../../transformations/include
   ../../alloc_aa/include 
   ../../pdg/include 
   ../../loop_structure/include
