--- a/src/loops/src/CMakeLists.txt
+++ b/src/loops/src/CMakeLists.txt
@@ -32,6 +32,7 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 include_directories(${LLVM_INCLUDE_DIRS} 
   ../../../external/svf/include
   ../../basic_utilities/include 
+  ../../transformations/include
   ../../architecture/include 
   ../../alloc_aa/include 
   ../../pdg/include 
