Added the ability to pass options to noelle-pre

--- a/tests/condor/Makefile
+++ b/tests/condor/Makefile
@@ -7,39 +7,39 @@ regression: regression_enablers regression_default regression_1 regression_2 reg
 
 regression_enablers:
 	cd ../ ; cp -r regression $@ ;
-	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -noelle-disable-helix -noelle-disable-dswp -noelle-disable-doall" ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -noelle-disable-helix -noelle-disable-dswp -noelle-disable-doall" " " ${EMAIL};
 	./scripts/appendTests.sh $@.con ;
 
 regression_default:
 	cd ../ ; cp -r regression $@ ;
-	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3" ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3" " " ${EMAIL};
 	./scripts/appendTests.sh $@.con ;
 
 regression_1:
 	cd ../ ; cp -r regression $@ ;
-	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -dswp-force -noelle-disable-helix" ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -noelle-disable-helix" "-dswp-force" ${EMAIL};
 	./scripts/appendTests.sh $@.con ;
 
 regression_2:
 	cd ../ ; cp -r regression $@ ;
-	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -dswp-force -noelle-disable-helix -dswp-no-scc-merge" ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -noelle-disable-helix" "-dswp-force -dswp-no-scc-merge" ${EMAIL};
 	./scripts/appendTests.sh $@.con ;
 
 regression_3:
 	cd ../ ; cp -r regression $@ ;
-	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -dswp-force -noelle-disable-dswp" ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -noelle-disable-dswp" "-dswp-force" ${EMAIL};
 	./scripts/appendTests.sh $@.con ;
 
 regression_4:
 	cd ../ ; cp -r regression $@ ;
-	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -dswp-force -noelle-disable-dswp -dswp-no-scc-merge " ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-verbose=3 -noelle-disable-dswp" "-dswp-force -dswp-no-scc-merge " ${EMAIL};
 	./scripts/appendTests.sh $@.con ;
 
 unit.con:
-	python2 scripts/generateCondorScript.py scripts/$@ ./$@ "$@" " " ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$@ ./$@ "$@" " " " " ${EMAIL};
 
 performance.con:
-	python2 scripts/generateCondorScript.py scripts/$@ ./$@ "$@" " " ${EMAIL};
+	python2 scripts/generateCondorScript.py scripts/$@ ./$@ "$@" " " " " ${EMAIL};
 
 submit:
 	scripts/submit.sh 
